@@ -5,6 +5,7 @@
 - Fix update calculations after destroy a row
 - Fix count and calculate searching with count_includes
 - Fix action_after_create
+- Cache associations options (for :select form_ui on associations), it can be disabled with config.cache_association_options = false
 
 = 3.3.0
 - Unify field overrides and list_ui method signatures
